test/tests/stages/18_structures/invalid_types/extra_credit/other_features/duplicate_struct_types_after_label.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[29]:
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  identifier(foo)
  :
  ;
  struct
  identifier(s)
  {
  int
  identifier(b)
  ;
  }
  ;
  return
  const int(0)
  ;
  }
